fixed section spacing

--- a/src/components/sections/Games/games.module.css
+++ b/src/components/sections/Games/games.module.css
@@ -41,11 +41,17 @@
 }
 
 @media (min-width: 768px) {
+  .gamesSection {
+    margin: 54px 0;
+  }
   .gameContainer {
     margin: 40px auto;
   }
 }
 @media (min-width: 1920px) {
+  .gamesSection {
+    margin: 72px 0;
+  }
   .heading h2 {
     font-size: 48px;
     line-height: 58px;
